<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NCq-Ls-vbn">
    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
    <dependencies>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00-0000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OrB-7v-mHW" customCla
                                                                        <rect key="frame" x="0.0" y="19.5" width="66" height="19.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00 AB CDE FG" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Km9-lb-crU" cust
                                                                        <rect key="frame" x="0.0" y="19.5" width="105" height="19.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JOINT BASE CHARLESTON, SC 29404" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" i
                                                                        <rect key="frame" x="0.0" y="19.5" width="281" height="19.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00-XXXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNA-5K-Dwf" customCla
                                                                        <rect key="frame" x="0.0" y="19.5" width="68" height="19.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00 AA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s8E-hv-IIg" customClass
                                                                        <rect key="frame" x="0.0" y="19.5" width="45" height="19.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DD MMM YYY" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="whD-PI-M6O" customClass="PBLTextField" customModule="Logging" customM
                                                                        <rect key="frame" x="0.0" y="25" width="245.5" height="34"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="X-XX" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IQa-zc-2NM" customClass="PBLTextField" customModule="Logging" customModuleP
                                                                        <rect key="frame" x="0.0" y="25" width="245.5" height="34"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ABCDEFGHIJ-1234567890" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UcB-RA-l2M" customClass="PBLTextField" customModule="Loggi
                                                                        <rect key="frame" x="0.0" y="25" width="271.5" height="34"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
