...
                                <color key="textColor" name="slate"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dRU-Ug-X5v" customClass="PBLButtonLight" customModule="Logging" customModuleProvider="target">
                                <rect key="frame" x="435" y="520.5" width="154" height="36"/>
                                <fontDescription key="fontDescription" name="DMSans-Bold" family="DM Sans" pointSize="20"/>
                                <state key="normal" title="AFTO FORM 781"/>
                                <connections>
                                    <action selector="form781Tapped:" destination="MHR-m1-9at" eventType="touchUpInside" id="oRd-Hj-b0h"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgb-C1-VgZ" customClass="PBLButtonDark" customModule="Logging" customModuleProvider="target">
                                <rect key="frame" x="799" y="1260" width="175" height="36"/>
...
